infra-project: basic window app example: improve comments

--- a/_examples/01_base_window/CMakeLists.txt
+++ b/_examples/01_base_window/CMakeLists.txt
@@ -8,15 +8,12 @@
 # ------------------------------------------------------------------------------
 # Example - window creation + main loop (solution + project)
 #*******************************************************************************
-# ┌──────────────────────────────────────────────────────────────────┐
-# │  Solution settings                                               │
-# └──────────────────────────────────────────────────────────────────┘
 cmake_minimum_required(VERSION 3.14)
 
-# --> replace with your path to toolbox (usually in subdirectory or same parent directory)
+# --> set relative path to pandora_toolbox sources (usually in subdirectory or same parent directory)
 set(PANDORA_TOOLBOX_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../..")
 
-# --> this project doesn't use any rendering API -> disable them
+# --> this solution doesn't use any rendering API -> disable them
 set(CWORK_VIDEO_D3D11 OFF CACHE INTERNAL "" FORCE)
 set(CWORK_VIDEO_VULKAN OFF CACHE INTERNAL "" FORCE)
 set(CWORK_VIDEO_OPENGL4 OFF CACHE INTERNAL "" FORCE)
@@ -25,6 +22,7 @@ set(CWORK_SHADER_COMPILERS OFF CACHE INTERNAL "" FORCE)
 include("${PANDORA_TOOLBOX_DIR}/_cmake/cwork.cmake")
 cwork_read_version_from_file("${PANDORA_TOOLBOX_DIR}/build_version.txt" ON)
 
+# -- Solution settings (version read from file) --
 project("example" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
 cwork_create_solution("${CMAKE_CURRENT_SOURCE_DIR}" "${PANDORA_TOOLBOX_DIR}/_cmake")
 
@@ -39,11 +37,11 @@ project("${CWORK_SOLUTION_NAME}.base_window" VERSION ${CWORK_BUILD_VERSION} LANG
 
 cwork_set_custom_libs("${PANDORA_TOOLBOX_DIR}" pandora ON OFF
     system
-    thread
     hardware
     video
 )
 
+# -- project resources (icon + cursor)
 if(WIN32 OR WIN64 OR _WIN32 OR _WIN64)
     cwork_set_embedded_resource_dir("${PANDORA_TOOLBOX_DIR}/_img/test_win32")
 else()
