--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@
 #*******************************************************************************
 cmake_minimum_required(VERSION 3.14)
 include("${CMAKE_CURRENT_SOURCE_DIR}/_cmake/cwork.cmake")
-cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/build_version.txt" ON)
+include("${CMAKE_CURRENT_SOURCE_DIR}/Version.cmake")
 project("pandora" VERSION ${CWORK_BUILD_VERSION})
 
 # ┌──────────────────────────────────────────────────────────────────┐
