--- a/_examples/03_simple_renderer_3D_cube/CMakeLists.txt
+++ b/_examples/03_simple_renderer_3D_cube/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CWORK_SHADER_COMPILERS ON CACHE INTERNAL "" FORCE) # shaders compiled at run
 set(CWORK_GEOM_STAGE_OFF ON CACHE INTERNAL "" FORCE)   # no geometry shader used by project -> disable unused features
 set(CWORK_TESS_STAGE_OFF ON CACHE INTERNAL "" FORCE)   # no tessellation shader used by project -> disable unused features
 include("${PANDORA_TOOLBOX_DIR}/_cmake/cwork.cmake")
-cwork_read_version_from_file("${PANDORA_TOOLBOX_DIR}/build_version.txt" ON)
+include("${PANDORA_TOOLBOX_DIR}/Version.cmake") # version read from file
 
 # --> solution params (replace "example" with your solution name)
 project("example" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
@@ -34,7 +34,7 @@ cwork_create_solution("${CMAKE_CURRENT_SOURCE_DIR}" "${PANDORA_TOOLBOX_DIR}/_cma
 # --> uncomment if project is placed in separate CMakeLists file (in child directory)
 #cmake_minimum_required(VERSION 3.14)
 #include("${PANDORA_TOOLBOX_DIR}/_cmake/cwork.cmake")
-#cwork_read_version_from_file("${PANDORA_TOOLBOX_DIR}/build_version.txt" OFF)
+#include("${PANDORA_TOOLBOX_DIR}/Version.cmake")
 
 # --> project params (replace with your project name)
 project("${CWORK_SOLUTION_NAME}.simple_renderer_3D_cube" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
