--- a/system/CMakeLists.txt
+++ b/system/CMakeLists.txt
@@ -22,7 +22,9 @@
 cmake_minimum_required(VERSION 3.14)
 include("${CMAKE_CURRENT_SOURCE_DIR}/../_cmake/cwork.cmake")
 cwork_set_default_solution("pandora" "${CMAKE_CURRENT_SOURCE_DIR}/..")
-cwork_read_version_from_file("${CMAKE_CURRENT_SOURCE_DIR}/../build_version.txt" OFF)
+if(NOT DEFINED CWORK_BUILD_VERSION OR NOT CWORK_BUILD_VERSION)
+    include("${CMAKE_CURRENT_SOURCE_DIR}/../Version.cmake")
+endif()
 project("${CWORK_SOLUTION_NAME}.system" VERSION ${CWORK_BUILD_VERSION} LANGUAGES C CXX)
 
 # ┌──────────────────────────────────────────────────────────────────┐
